--- a/Reposteria/src/main/resources/application.properties
+++ b/Reposteria/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #para definir el puerto donde "escuchará" el servidor
-server.port=8080
+server.port=90
 
 #Para definir el formato de despliegue de fecha/hora del log en la consola
 logging.pattern.dateformat=hh:mm
@@ -12,7 +12,7 @@ spring.thymeleaf.cache=false
 
 
 #MySql conexion
-spring.datasource.url=jdbc:mysql://localhost:3306/ReposteriaDB?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/ReposteriaDB
 spring.datasource.username=administrador
 spring.datasource.password=123-admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
